# docs/openapi.js
@@ -326,9 +326,9 @@ window.openapi = {
         }
       }
     },
-    "/api/v2/progress/task/{taskId}": {
+    "/progress/task/{taskId}": {
       "post": {
-        "summary": "Update task progress",
+        "summary": "Update the progress state of a single task.",
         "tags": [
           "Progress"
         ],
@@ -441,7 +441,7 @@ window.openapi = {
         }
       }
     },
-    "/api/v2/progress/task/objective/{objectiveId}": {
+    "/progress/task/objective/{objectiveId}": {
       "post": {
         "summary": "Update objective progress for a task.",
         "tags": [
